Updated to Adventure API for chat messages.